# qrca

./: .editorconfig  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.qrca.appdata.xml  org.kde.qrca.desktop  org.kde.qrca.json  org.kde.qrca.wifi.desktop  org.kde.qrskanner.appdata.xml  org.kde.qrskanner.desktop  org.kde.qrskanner.json  snapcraft.yaml
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: ic_launcher_foreground.xml
po/ar/: qrca.po
po/ast/: qrca.po
po/ca/: qrca.po
po/ca@valencia/: qrca.po
po/cs/: qrca.po
po/de/: qrca.po
po/en_GB/: qrca.po
po/eo/: qrca.po
po/es/: qrca.po
po/et/: qrca.po
po/eu/: qrca.po
po/fi/: qrca.po
po/fr/: qrca.po
po/ga/: qrca.po
po/gl/: qrca.po
po/he/: qrca.po
po/hi/: qrca.po
po/hu/: qrca.po
po/ia/: qrca.po
po/is/: qrca.po
po/it/: qrca.po
po/ja/: qrca.po
po/ka/: qrca.po
po/ko/: qrca.po
po/lt/: qrca.po
po/lv/: qrca.po
po/nl/: qrca.po
po/nn/: qrca.po
po/pa/: qrca.po
po/pl/: qrca.po
po/pt/: qrca.po
po/pt_BR/: qrca.po
po/ru/: qrca.po
po/sa/: qrca.po
po/sk/: qrca.po
po/sl/: qrca.po
po/sv/: qrca.po
po/tr/: qrca.po
po/ug/: qrca.po
po/uk/: qrca.po
po/zh_CN/: qrca.po
po/zh_TW/: qrca.po
src/: CMakeLists.txt  DisplaySavedCode.qml  Gallery.qml  GalleryModel.cpp  GalleryModel.h  QrCodeContent.cpp  QrCodeContent.h  QrCodeDecoder.cpp  QrCodeDecoder.h  QrCodeScanner.cpp  QrCodeScanner.h  QrCodeScannerFilter.cpp  QrCodeScannerFilter.h  QrCodeVideoFrame.cpp  QrCodeVideoFrame.h  QrSkanner.cpp  QrSkanner.h  Qrca.cpp  Qrca.h  clipboard.cpp  clipboard.h  config-qrca.h.in  main.cpp  mecardparser.cpp  mecardparser.h  notificationmanager.cpp  notificationmanager.h  qrcastore.kcfg  qrcastore.kcfgc  resources.qrc
src/contents/ui/: AboutPage.qml  QrCodeEncoderPage.qml  QrCodeScannerPage.qml  ShareSheet.qml  main.qml
src/qml/: AboutPage.qml  Main.qml  QrCodeEncoderPage.qml  QrCodeScannerPage.qml  ShareSheet.qml
tests/: CMakeLists.txt  mecardparsertest.cpp  qrcatest.cpp
